--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ footer {
 }
 footer p {
   margin-bottom: 5px;
-  color: #fff; /* Beyaz yapıldı */
+  color: #fff;
 }
 
 /* WhatsApp Butonu */
@@ -148,3 +148,71 @@ footer p {
     font-size: 1.7rem;
   }
 }
+
+  h1 {
+    text-align: center;
+    margin-top: 20px;
+    color: #333;
+    font-size: 2.5em;
+  }
+
+  table {
+    width: 80%;
+    margin: 30px auto;
+    border-collapse: collapse;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  th, td {
+    padding: 12px 15px;
+    text-align: left;
+    color: #333;
+  }
+
+  th {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  td {
+    background-color: #ffffff;
+    border-bottom: 1px solid #f1f1f1;
+    font-size: 1em;
+  }
+
+  tr:hover td {
+    background-color: #f9f9f9;
+  }
+
+  tr:last-child td {
+    border-bottom: none;
+  }
+
+  tr:nth-child(even) td {
+    background-color: #f9f9f9;
+  }
+
+  table th,
+  table td {
+    border: 1px solid #ddd;
+    padding: 8px 15px;
+  }
+
+  table th {
+    background-color: #33b5e5;
+    color: white;
+    text-align: center;
+  }
+
+  table tr:hover {
+    background-color: #e9f7fd;
+  }
+
+  table td {
+    text-align: center;
+  }
