--- a/styles.css
+++ b/styles.css
@@ -216,3 +216,86 @@ footer p {
   table td {
     text-align: center;
   }
+
+
+.pagination {
+  display: flex;
+  justify-content: center; /* Butonları yatayda ortalayalım */
+  gap: 10px; /* Butonlar arasına boşluk ekleyelim */
+  margin-top: 20px; /* Tablo ile buton arasına boşluk ekleyelim */
+  width: 100%; /* Pagination container'ın genişliği %100 olacak */
+  box-sizing: border-box; /* Butonların genişlik hesaplamasını düzgün yapalım */
+}
+
+.pagination button {
+  padding: 10px 15px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.pagination button:hover {
+  background-color: #0056b3;
+}
+
+.pagination button.active {
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.pagination button:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
+.pagination .dots {
+  padding: 10px 15px;
+  cursor: default;
+  background-color: #f1f1f1;
+  color: #333;
+}
+
+/* Tablo */
+table {
+  width: 80%;
+  margin-top: 30px;
+  border-collapse: collapse;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+th, td {
+  padding: 12px 15px;
+  text-align: left;
+  color: #333;
+}
+
+th {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+td {
+  background-color: #ffffff;
+  border-bottom: 1px solid #f1f1f1;
+  font-size: 1em;
+}
+
+tr:hover td {
+  background-color: #f9f9f9;
+}
+
+tr:last-child td {
+  border-bottom: none;
+}
+
+tr:nth-child(even) td {
+  background-color: #f9f9f9;
+}
